# 3DViewer_v1.0

./: README.md  README_RUS.md
src/: CMakeLists.txt  Dockerfile  Doxyfile  Makefile  debug.c
src/gui/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  viewer.cpp  viewer.h  viewer.pro  viewer.ui
src/modules/: afine.c  common.h  matrix.c  matrix.h  objects.h  pars.c  parse.c
src/modules/include/: afine.h  common.h  matrix.h  objects.h  parse.h
src/resources/: resource.qrc
src/tests/: main_test.c  main_test.h
src/tests/include_test/: afine_test.h  example_test.h  matrix_test.h  parse_test.h
src/tests/modules_test/: afine_test.c  blocks_test.c  matrix_test.c  parse_test.c
